--- a/Shelter/Shelter.csproj
+++ b/Shelter/Shelter.csproj
@@ -5,4 +5,7 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Shelter.Data\Shelter.Data.csproj" />
+  </ItemGroup>
 </Project>
