--- a/Shelter/Shelter.csproj
+++ b/Shelter/Shelter.csproj
@@ -8,4 +8,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Shelter.Data\Shelter.Data.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
+  </ItemGroup>
 </Project>
